--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cryptocompare": "^0.4.0",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.1",
-    "node-fetch": "^1.7.3"
+    "node-fetch": "^1.7.3",
+    "simple-node-logger": "^0.93.33"
   }
 }
