--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "2"
 services:
   ingest:
     container_name: ingest
-    image: cryptoinsights/ingest
     restart: always
     build: .
     links:
@@ -12,6 +11,7 @@ services:
   mongo:
     container_name: mongo
     image: mongo
+    restart: always
     volumes:
       - ./data:/data/db
     ports:
