--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,6 @@ services:
     image: mongo
     restart: always
     volumes:
-      - ./data:/data/db
+      - /mongo_data:/data/db
     ports:
       - "27017:27017"
